<resources>
    <string name="app_name">TODO12</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="donut">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">Froyo is premium self_serve frozen yogart.</string>
    <string name="same_day">Same day messanger service</string>
    <string name="next_day">Next day ground delivary</string>
    <string name="pick_up">Pick up</string>
    <string-array name="array_list">
        <item> Home </item>
        <item> Work </item>
        <item>Phone</item></string-array>

        />
</resources>