<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
   >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="147dp"
        android:onClick="donutpop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082"
        app:srcCompat="@drawable/donut" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="147dp"
        android:layout_height="143dp"
        android:layout_marginStart="16dp"
        android:onClick="icepop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44"
        app:srcCompat="@drawable/ice" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="146dp"
        android:layout_height="175dp"
        android:onClick="froyopop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812"
        app:srcCompat="@drawable/froyo2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="206dp"
        android:layout_height="147dp"
        android:gravity="center"
        android:text="@string/donut"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082"
        android:fontFamily="sans-serif"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="212dp"
        android:layout_height="175dp"
        android:gravity="center"
        android:text="@string/ice"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812"
        android:fontFamily="sans-serif"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="206dp"
        android:layout_height="147dp"
        android:gravity="center"
        android:text="@string/froyo"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443"
        android:fontFamily="sans-serif"/>


    <ImageView
        android:id="@+id/floatingActionButton"
        android:layout_width="55dp"
        android:layout_height="54dp"
        android:clickable="true"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96"
        app:srcCompat="@drawable/cart" />


</androidx.constraintlayout.widget.ConstraintLayout>